--- a/app/src/main/res/layout/activity_open_payment.xml
+++ b/app/src/main/res/layout/activity_open_payment.xml
@@ -87,7 +87,7 @@
                         android:layout_height="match_parent"
                         android:text="1"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -97,7 +97,7 @@
                         android:layout_height="match_parent"
                         android:text="2"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -107,7 +107,7 @@
                         android:layout_height="match_parent"
                         android:text="3"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                 </LinearLayout>
@@ -122,7 +122,7 @@
                         android:layout_height="match_parent"
                         android:text="4"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -132,7 +132,7 @@
                         android:layout_height="match_parent"
                         android:text="5"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -142,7 +142,7 @@
                         android:layout_height="match_parent"
                         android:text="6"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                 </LinearLayout>
@@ -157,7 +157,7 @@
                         android:layout_height="match_parent"
                         android:text="7"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -167,7 +167,7 @@
                         android:layout_height="match_parent"
                         android:text="8"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -177,7 +177,7 @@
                         android:layout_height="match_parent"
                         android:text="9"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                 </LinearLayout>
@@ -191,7 +191,7 @@
                         android:layout_height="match_parent"
                         android:text=""
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -201,7 +201,7 @@
                         android:layout_height="match_parent"
                         android:text="0"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                     <Button
@@ -211,7 +211,7 @@
                         android:layout_height="match_parent"
                         android:text="删除"
                         android:textColor="#222222"
-                        android:background="#ffffff"
+                        android:background="@drawable/num_button_selector"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
                 </LinearLayout>
